[gd_scene load_steps=4 format=3 uid="uid://bb2gokljyaa7w"]

[ext_resource type="Script" uid="uid://c3wj48goutayq" path="res://scripts/gameplay/card/card_stack.gd" id="1_k58r1"]
[ext_resource type="Texture2D" uid="uid://cta8dnjwbw5sk" path="res://assets/sprite/stack counter.png" id="1_xs0px"]

[sub_resource type="CircleShape2D" id="CircleShape2D_k58r1"]
radius = 130.0

[node name="StackCounter" type="Node2D"]
script = ExtResource("1_k58r1")

[node name="StackBackground" type="Sprite2D" parent="."]
texture = ExtResource("1_xs0px")

[node name="Label" type="Label" parent="."]
offset_left = -88.0
offset_top = -84.0
offset_right = 88.0
offset_bottom = 96.0
theme_override_colors/font_color = Color(1, 0.5411765, 0.19607843, 1)
theme_override_font_sizes/font_size = 100
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_k58r1")
debug_color = Color(0.8, 0.3019608, 0.7411765, 0.85490197)

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
